# graphrag_v1

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server.py
_notes_on_this/: folder_structure.txt  future.txt  save_usefull_coded.txt
documentation/: future.txt  program.txt  project_flow.txt  project_run.txt  project_structure.txt
src/: config.py
src/cli/: main_cli.py  main_testing.py
src/data_processes/: data_ingestion.py  data_processing.py
src/database_setups/: llamaindex_things.py  neo4j.py  weaviatedb.py
src/langchain_things/: answer_generator.py  answer_generator_graphrag.py  answer_grader.py  graph_retrieval_generation.py  hallucination_grader.py  question_enhancer.py  retrieval_vector_grader.py  router.py
src/langgraph_things/: graph_state_init.py  workflow.py
src/langgraph_things/nodes/: answer_generator_graphrag.py  answer_generator_vector.py  decide_enhance_question.py  enhance_question.py  grade_hallucination.py  grade_vector_context.py  question_router.py  retrieve_graph.py  retrieve_vector.py
src/model_setups/: ollama_embedding_model.py  ollama_models.py
src/streamlit/: app.py
testing_codes/: graphrag_test_1.ipynb
